public/app.css
html, body {
  height: 100%;
  margin: 0;
  width: 100%;
}

body {
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -webkit-tap-highlight-color: transparent;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  overflow-y: scroll;
}

::-webkit-scrollbar {
  width: 12px;
}

::-webkit-scrollbar-track {
  background: #333;
}

::-webkit-scrollbar-thumb {
  background-color: #FA0;
  border-radius: 8px;
  border: 4px solid #333;
}

.vjs-text-track-display > div {
	margin: 0 !important;
}

.vjs-text-track-display .vjs-text-track-cue {
    inset: auto !important;
    height: 100vh !important;
}

.vjs-text-track-display .vjs-text-track-cue > div {
	-webkit-text-stroke: black;
	-webkit-text-stroke-width: max(0.2vmin, 1px);
	background: transparent !important;
	font-family: Trebuchet MS !important;
	font-size: max(6vmin, 30px);
	font-weight: bold;
	inset: auto auto max(5vmin, 25px) auto !important;
	position: absolute !important;
	transform: translateX(-50%);
	width: 100%;
}

